--- a/sysutils/py-Beaver/Makefile
+++ b/sysutils/py-Beaver/Makefile
@@ -15,7 +15,7 @@ LICENSE=	MIT
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}conf_d>=0.0.4:${PORTSDIR}/textproc/py-conf_d \
 	${PYTHON_PKGNAMEPREFIX}glob2>=0:${PORTSDIR}/textproc/py-glob2 \
-	${PYTHON_PKGNAMEPREFIX}msgpack>=0:${PORTSDIR}/devel/py-msgpack-python \
+	${PYTHON_PKGNAMEPREFIX}msgpack-python>=0:${PORTSDIR}/devel/py-msgpack-python \
 	${PYTHON_PKGNAMEPREFIX}daemon>=0:${PORTSDIR}/devel/py-daemon \
 	${PYTHON_PKGNAMEPREFIX}sqlite3>=0:${PORTSDIR}/databases/py-sqlite3
 
